# esp-sensor

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  diagram.json  flake.nix  sdkconfig.defaults  shell.nix  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: error.rs  lib.rs  main.rs  wifi.rs
src/http_compat/: mod.rs
src/influx/: mod.rs
src/line_proto/: mod.rs
