[package]
name = "esp_dht22"
version = "0.1.0"
authors = ["Danylo Kondratiev <knightpp@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.13.0", features = [
    "async",
    "embassy",
    "embassy-time-timg0",
] }
embassy-executor = { version = "0.2.0", features = [
    "arch-xtensa",
    "executor-thread",
    "integrated-timers",
    "nightly",
] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", branch = "main", package = "esp-wifi", features = [
    "esp32",
    "wifi",
    "async",
    "embedded-svc",
    "embassy-net",
] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embassy-net = { version = "0.1.0", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-sync = { version = "0.2.0", features = ["nightly"] }

esp-println = { version = "0.5.0", features = ["esp32", "log"] }
# dht-embedded = { path = "../../../git/dht-embedded-rs" }
dht-hal-drv = "0.2.2"
tm1637 = { git = "https://github.com/knightpp/tm1637-rs" }
log = "=0.4.18"
toml-cfg = "0.1.3"

[profile.dev.package.esp-wifi]
opt-level = 3

# Disable LTO for dev and release builds as recommended by esp-wifi docs
[profile.dev]
lto = "off"
[profile.release]
lto = "off"
