[package]
name = "esp_sensor"
version = "0.1.0"
authors = ["Danylo Kondratiev <knightpp@proton.me>"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"

[profile.dev]
debug = true
opt-level = "z"
lto = "off"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "off"

[features]

default = ["std", "hal", "esp-idf-sys/native"]

pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = [
    "alloc",
    "esp-idf-sys/std",
    "esp-idf-sys/binstart",
    "embedded-svc?/std",
    "esp-idf-hal?/std",
    "esp-idf-svc?/std",
]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = [
    "embedded-svc?/nightly",
    "esp-idf-svc?/nightly",
] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = [
    "esp-idf-hal?/embassy-sync",
    "esp-idf-hal?/critical-section",
    "esp-idf-hal?/edge-executor",
    "esp-idf-svc?/embassy-time-driver",
    "esp-idf-svc?/embassy-time-isr-queue",
]

[build-dependencies]
embuild = "0.31"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }

tm1637 = { git = "https://github.com/knightpp/tm1637-rs" }
toml-cfg = "0.1"
dht-hal-drv = { git = "https://github.com/knightpp/dht-hal-drv" }
bus = "2.4"
anyhow = "1.0"
